--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "        [10]])"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "        [9]])"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "        [1., 9.]])"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "        [1., 2., 3., 4., 5., 6., 7., 8., 9.]])"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4.4445e-01,  3.6112e-01,  2.7779e-01,  1.9446e-01,  1.1113e-01,\n",
+       "         2.7800e-02, -5.5530e-02, -1.3886e-01, -2.2219e-01],\n",
+       "       [-6.6660e-02, -4.9990e-02, -3.3320e-02, -1.6650e-02,  2.0000e-05,\n",
+       "         1.6690e-02,  3.3360e-02,  5.0030e-02,  6.6700e-02]])"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([[1,1,1,1,1,1,1,1,1],[1,2,3,4,5,6,7,8,9]])\n",
+    "\n",
+    "b = np.array([[.52778, -.08333],[-.08333, .01667]])\n",
+    "\n",
+    "np.dot(b, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +192,7 @@
        "        [ 45., 285.]])"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +214,7 @@
        "        [-0.08333333,  0.01666667]])"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +238,7 @@
        "          0.01666667,  0.03333333,  0.05      ,  0.06666667]])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +260,7 @@
        "        [0.91666667]])"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +282,7 @@
        "        [0.91666667]])"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +318,7 @@
        "        [8.88888889]])"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +408,7 @@
        "        [8.88888889]])"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -410,13 +437,339 @@
        "2.7932098765432096"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.mean(np.square(np.absolute(linreg.fit(x, y) - y)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## From Scratch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1, 2, 3, 4, 5, 6, 7, 8, 9], [4, 2, 3, 1, 6, 7, 5, 9, 10])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [[4,1],[2,2],[3,3],[1,4],[6,5],[7,6],[5,7],[9,8],[10,9]]\n",
+    "x = [i[1] for i in data]\n",
+    "y = [i[0] for i in data]\n",
+    "\n",
+    "x, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 1], [1, 2], [1, 3], [1, 4], [1, 5], [1, 6], [1, 7], [1, 8], [1, 9]]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg_matrix = [[(i * 0) + 1, i] for i in x]\n",
+    "reg_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 1, 1, 1, 1, 1, 1, 1, 1], [1, 2, 3, 4, 5, 6, 7, 8, 9]]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transposed_reg_matrix = [[i[0] for i in reg_matrix], [i[1] for i in reg_matrix]]\n",
+    "transposed_reg_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dot_product(matrix_a, matrix_b):    \n",
+    "    dot_product = []\n",
+    "    for i in range(len(matrix_b[0])):\n",
+    "        prod_row = []\n",
+    "        for j in range(len(matrix_a)):\n",
+    "            row = matrix_a[i]\n",
+    "            column = [x[j] for x in matrix_b]\n",
+    "            prod_row.append(sum([m * n for m, n in zip(row, column)]))\n",
+    "        dot_product.append(prod_row)\n",
+    "\n",
+    "    return dot_product  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[9, 45], [45, 285]]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dot_product(transposed_reg_matrix, reg_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inverse(two_x_two_matrix):\n",
+    "    fraction = 1 / ((two_x_two_matrix[0][0] * two_x_two_matrix[1][1])\\\n",
+    "               - (two_x_two_matrix[0][1] * two_x_two_matrix[1][0]))\n",
+    "    \n",
+    "    # rearrange_matrix\n",
+    "    initial_00 = two_x_two_matrix[0][0]\n",
+    "    initial_11 = two_x_two_matrix[1][1]\n",
+    "    two_x_two_matrix[0][0] = initial_11 * fraction\n",
+    "    two_x_two_matrix[0][1] = (two_x_two_matrix[0][1] * -1) * fraction\n",
+    "    two_x_two_matrix[1][0] = (two_x_two_matrix[1][0] * -1) * fraction\n",
+    "    two_x_two_matrix[1][1] = initial_00 * fraction\n",
+    "    \n",
+    "    return two_x_two_matrix  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.5277777777777778, -0.08333333333333334],\n",
+       " [-0.08333333333333334, 0.016666666666666666]]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inverse(dot_product(transposed_reg_matrix, reg_matrix))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 1, 1, 1, 1, 1, 1, 1, 1], [1, 2, 3, 4, 5, 6, 7, 8, 9]]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = inverse(dot_product(transposed_reg_matrix, reg_matrix))\n",
+    "b = transposed_reg_matrix\n",
+    "\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1] [0.5277777777777778, -0.08333333333333334]\n",
+      "-0.04398148148148149\n",
+      "[1, 1] [-0.08333333333333334, 0.016666666666666666]\n",
+      "-0.001388888888888889\n",
+      "[1, 2] [0.5277777777777778, -0.08333333333333334]\n",
+      "-0.08796296296296298\n",
+      "[1, 2] [-0.08333333333333334, 0.016666666666666666]\n",
+      "-0.002777777777777778\n",
+      "[1, 3] [0.5277777777777778, -0.08333333333333334]\n",
+      "-0.13194444444444448\n",
+      "[1, 3] [-0.08333333333333334, 0.016666666666666666]\n",
+      "-0.004166666666666667\n",
+      "[1, 4] [0.5277777777777778, -0.08333333333333334]\n",
+      "-0.17592592592592596\n",
+      "[1, 4] [-0.08333333333333334, 0.016666666666666666]\n",
+      "-0.005555555555555556\n",
+      "[1, 5] [0.5277777777777778, -0.08333333333333334]\n",
+      "-0.21990740740740744\n",
+      "[1, 5] [-0.08333333333333334, 0.016666666666666666]\n",
+      "-0.006944444444444446\n",
+      "[1, 6] [0.5277777777777778, -0.08333333333333334]\n",
+      "-0.26388888888888895\n",
+      "[1, 6] [-0.08333333333333334, 0.016666666666666666]\n",
+      "-0.008333333333333333\n",
+      "[1, 7] [0.5277777777777778, -0.08333333333333334]\n",
+      "-0.3078703703703704\n",
+      "[1, 7] [-0.08333333333333334, 0.016666666666666666]\n",
+      "-0.009722222222222222\n",
+      "[1, 8] [0.5277777777777778, -0.08333333333333334]\n",
+      "-0.3518518518518519\n",
+      "[1, 8] [-0.08333333333333334, 0.016666666666666666]\n",
+      "-0.011111111111111112\n",
+      "[1, 9] [0.5277777777777778, -0.08333333333333334]\n",
+      "-0.39583333333333337\n",
+      "[1, 9] [-0.08333333333333334, 0.016666666666666666]\n",
+      "-0.012500000000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix_a = inverse(dot_product(transposed_reg_matrix, reg_matrix))\n",
+    "matrix_b = transposed_reg_matrix\n",
+    "result = []\n",
+    "\n",
+    "for i in [[a, b] for a, b in zip(matrix_b[0], matrix_b[1])]:\n",
+    "    row = []\n",
+    "    for j in matrix_a:\n",
+    "        print(i, j)\n",
+    "        product = i[0] * i[1] * j[0] * j[1]\n",
+    "        print(product)\n",
+    "        row.append(product)\n",
+    "    result.append(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[-0.04398148148148149, -0.001388888888888889],\n",
+       " [-0.08796296296296298, -0.002777777777777778],\n",
+       " [-0.13194444444444448, -0.004166666666666667],\n",
+       " [-0.17592592592592596, -0.005555555555555556],\n",
+       " [-0.21990740740740744, -0.006944444444444446],\n",
+       " [-0.26388888888888895, -0.008333333333333333],\n",
+       " [-0.3078703703703704, -0.009722222222222222],\n",
+       " [-0.3518518518518519, -0.011111111111111112],\n",
+       " [-0.39583333333333337, -0.012500000000000002]]"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.4444444444444444, -0.06666666666666668],\n",
+       " [0.3611111111111111, -0.05000000000000001]]"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dot_product(matrix_b, matrix_a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "cmd = input()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'12'"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cmd.split( )[0]"
    ]
   },
   {
